<resources>
    <string name="title_activity_maps_base">Map</string>
    <string name="retry">Retry</string>
    <string name="error_no_network">Found no internet connection.</string>
    <string name="generic_error">Something went wrong at our end.</string>
    <string name="please_wait">Please wait…</string>

    <!--Login Screen-->
    <string name="continue_with_fb">Continue with Facebook</string>
    <string name="failed_login">Failed to login with facebook. Please try again</string>
    <string name="continue_without_login">Continue without Login</string>
    <string name="or">or</string>
    <string name="create_an_account">Create an Account</string>

    <!--Navigation Drawer-->
    <string name="near_profile">My Profile</string>
    <string name="leader_board">Leader Board</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="log_in">Log In</string>
    <string name="user_name_guest">Guest</string>
    <string name="points_earned">%1$s points earned</string>

    <!--Nearby Museums Screen-->
    <string name="search">Search Places</string>
    <string name="no_musemus_found">Sorry! Nothing to explore near your location. Please search for other places</string>
    <string name="distance_kms">%1$s Km</string>
    <string name="some_error_occurred">Some error occurred. Please try again later</string>
    
    <!--Detail Screen-->
    <string name="about">ABOUT</string>
    <string name="quizzes">QUIZZES</string>
    <string name="distance">DISTANCE</string>
    <string name="upcoming_events">%1$d UPCOMING EVENTS</string>
    <string name="city_country">%1$s, %2$s</string>
    <string name="you">You</string>
    <string name="explore_quizzes">Explore Quizzes</string>
    <string name="photos_added">%1$d PHOTOS ADDED</string>
    <string name="explore_amazing_quizzes">Explore these amazing quizzes to know what you grasped from the tour and compete against others around the world</string>

    <!--Quiz Screen-->
    <string name="letter_a">A</string>
    <string name="letter_b">B</string>
    <string name="letter_c">C</string>
    <string name="letter_d">D</string>
    <string name="option_a">A. %1$s</string>
    <string name="option_b">B. %1$s</string>
    <string name="option_c">C. %1$s</string>
    <string name="option_d">D. %1$s</string>
    <string name="submit_answers">Submit Answers</string>
    <string name="xplor_again">Xplor More</string>
    <string name="completed">Completed</string>
    <string name="submit_answer">Submit Answer</string>
    <string name="view_trivia">View Trivia</string>
    <string name="you_were_right">You were Right!!</string>
    <string name="you_were_wrong">You were Wrong!!</string>
    <string name="did_you_know">Did you Know?</string>
    <string name="it_was">It was %1$s</string>
    <string name="question_already_attempted">Question Already Attempted</string>
    <string name="view_question">View Question</string>
    <string name="continue_btn">Continue</string>
    <string name="correct">Correct</string>
    <string name="wrong">Wrong</string>
    <string name="skipped">Skipped</string>

    <!--LeaderBoard-->
    <string name="leaderboard">LEADERBOARD</string>
    <string name="need_to_log_in">You need to login to see the leaderboard</string>
    <string name="need_to_log_in_to_see_profile">You need to login to see your profile</string>
    <string name="need_to_log_in_start_quiz">You need to login to start a quiz</string>
    <string name="points">%1$s Points</string>
    <string name="quizzes_lower">Quizzes</string>
    <string name="rank">Rank</string>
    <string name="accuracy">Accuracy</string>
    <string name="rank_dash">-</string>
</resources>
