<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_location"
            android:title="@string/near_profile"
            />
        <item
            android:id="@+id/nav_leader_board"
            android:icon="@drawable/ic_leader_board"
            android:title="@string/leader_board"
            />
        <item
            android:id="@+id/nav_log_out"
            android:icon="@drawable/ic_log_out"
            android:title="@string/log_out"
            />
        <item
            android:id="@+id/nav_log_in"
            android:icon="@drawable/ic_log_out"
            android:title="@string/log_in"
            />
    </group>
</menu>